--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "run": "tsc && node ./build/index.js"
+    "run": "tsc && node ./dist/index.js"
   },
   "repository": {
     "type": "git",
