disabled dupe class members warning for eslint
Signed-off-by: Nikita Skobelevs <nikita.skobelevs@gmail.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     ],
     "rules": {
       "no-useless-constructor": "off",
+      "no-dupe-class-members": "off",
       "import/extensions": [
         "error",
         "ignorePackages",
