--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,14 @@
         {
           "ts": "never"
         }
-     ]
+     ],
+     "lines-between-class-members": [
+       "error",
+       "always",
+       {
+         "exceptAfterSingleLine": true
+        }
+      ]
     },
     "settings": {
       "import/resolver": {
