--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "run": "tsc && node ./dist/index.js"
+    "start": "tsc --watch && nodemon -q ./dist/index.js",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
+    "nodemon": "^2.0.4",
     "typescript": "^3.9.3"
   }
 }
